fix emojiWrap styles for Emoji

--- a/src/generalComponents/Elements/Emoji.module.sass
+++ b/src/generalComponents/Elements/Emoji.module.sass
@@ -10,7 +10,7 @@
     display: flex
     flex-wrap: wrap
     //justify-content: space-between
-    width: 92%
+    width: 89%
     .emoji
       display: flex
       align-items: center
